ecmascript/parser/tests/test262-error-references/fail/c0ad1c20e662c8ed.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/c0ad1c20e662c8ed.js:1:10
  |
1 | obj = {x = 0}
  |          ^

